# internal/router/health_router.go
@@ -1,0 +1,12 @@
+package router
+
+import (
+	"gin-samples/internal/controller"
+
+	"github.com/gin-gonic/gin"
+)
+
+func AddHealthRoutes(r *gin.Engine, healthController controller.HealthController) {
+	r.GET("/health/liveness", healthController.Liveness)
+	r.GET("/health/readiness", healthController.Readiness)
+}
